<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:padding="10dip"
        android:textStyle="bold"
        android:text="@string/add_header_string"
        android:gravity="center">
    </TextView>
    <TextView
        android:id="@+id/textFullName"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:padding="10dip"
        android:textStyle="bold"
        android:text="@string/add_fullName_string">
    </TextView>
    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:ems="10" />
    <TextView
        android:id="@+id/textDepartmentNumber"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:padding="10dip"
        android:textStyle="bold"
        android:text="@string/add_departmentNumber_string">
    </TextView>
    <EditText
        android:id="@+id/editTextDepartmentNumber"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:ems="10" />
    <TextView
        android:id="@+id/textPost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:padding="10dip"
        android:textStyle="bold"
        android:text="@string/add_post_string">
    </TextView>
    <EditText
        android:id="@+id/editTextPost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:ems="10" />
    <TextView
        android:id="@+id/textFirstDate"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:padding="10dip"
        android:textStyle="bold"
        android:text="@string/add_first_date_string">
    </TextView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        <EditText
            android:id="@+id/editTextFirstDateDay"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            tools:ignore="NestedWeights" />
        <EditText
            android:id="@+id/editTextFirstDateMonth"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"/>
        <EditText
            android:id="@+id/editTextFirstDateYear"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"/>
    </LinearLayout>

</LinearLayout>